samples/_failures_safe/1761631378_0ef7a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af69f567.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_af69f567.c:167:5: error: expected declaration or statement at end of input
  167 |     return result;
      |     ^~~~~~
